Bug 423216 - Silently fails to save video if target destination does not exist
Summary: Silently fails to save video if target destination does not exist
Status: RESOLVED FIXED
Alias: None
Product: kamoso
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: VHI critical
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-19 12:04 UTC by David Edmundson
Modified: 2020-07-12 01:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2020-06-19 12:04:20 UTC
My videos folder was set at ~/Videos  for some reason this didn't exist. 

A saved video neither ended up creating the folder, or saving in Pictures. There was no warning.
Comment 1 Aleix Pol 2020-07-12 01:31:57 UTC
Git commit a4f712a54fb036169daafd0cd9283dd43c9bcd06 by Aleix Pol.
Committed on 12/07/2020 at 01:26.
Pushed by apol into branch 'release/20.08'.

Notify when a video could not be moved

M  +12   -1    src/kamoso.cpp
M  +1    -0    src/kamoso.h
M  +5    -0    src/qml/Main.qml

https://invent.kde.org/multimedia/kamoso/commit/a4f712a54fb036169daafd0cd9283dd43c9bcd06
Comment 2 Aleix Pol 2020-07-12 01:31:57 UTC
Git commit 77080a956733b00415b79e91299b5a2bf1e28ad8 by Aleix Pol.
Committed on 12/07/2020 at 01:30.
Pushed by apol into branch 'release/20.08'.

Make sure the video directory is available as we start recording

M  +11   -0    src/kamoso.cpp

https://invent.kde.org/multimedia/kamoso/commit/77080a956733b00415b79e91299b5a2bf1e28ad8