Make sure the video directory is available as we start recording

BUG: 423216